syntax = "proto3";

package talos;

option go_package = "./proto";

// The Admin Service defines the Control Plane operations
service AdminService {
  // UpdatePolicy allows admins to push new rules (CRUD)
  rpc UpdatePolicy (UpdatePolicyRequest) returns (UpdatePolicyResponse);

  // WatchPolicies is a server-side streaming RPC.
  // Sidecars connect and keep the stream open to receive real-time updates.
  rpc WatchPolicies (WatchRequest) returns (stream PolicyUpdate);
}

// Data structures
message Policy {
  string subject = 1; // e.g., "user:123" or "service:payment"
  string action = 2;  // e.g., "read", "write"
  string effect = 3;  // "allow" or "deny"
}

// Request to add/update a policy
message UpdatePolicyRequest {
  string subject = 1;
  string action = 2;
  string effect = 3;
}

message UpdatePolicyResponse {
  bool success = 1;
  string error_message = 2;
}

// Sidecar identification
message WatchRequest {
  string node_id = 1; // Unique ID of the sidecar (e.g., Pod Name)
}

// The payload sent down the stream
message PolicyUpdate {
  // Sends the full snapshot for now (MVP). 
  // Future optimization: Send incremental deltas.
  repeated Policy policies = 1;
}
